--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import 'attention_seekers/animate__bounceInRight.css';
 *{
   margin: 0%;
   border: 0mm;
@@ -9,6 +10,8 @@
   --close-white: #e3e0cf;
   --like-white: #dddfd4;
   --nice-white: #f7f4ef;
+  --animation-duration: 800ms;
+  --animation-delay: 0.9s;
 }
 body{
   font-family: Roboto;
@@ -66,14 +69,19 @@ margin-left: -65%;
 
 #img{
 margin-left: 150%;
-margin-top: -50%;
-width: 150px;
-height: 200px;
-padding: 2px;
+margin-top: -50%; 
 overflow: hidden;
-border-radius: 20%;
-background: circle;
-transition: ease-out 0.5s;
+width: 140px;
+height: 150px;
+-moz-border-radius: 70px; 
+-webkit-border-radius: 70px; 
+border-radius: 70px;
+background-color: #282f36;
+animation: animate__bounceInRight;
+animation-duration: 2s;
+}
+.animate__bounceInRight{
+  --animation-duration: 2s;
 }
 #about{
 font-family: montserrat;
@@ -109,7 +117,7 @@ margin-left: 12%
 margin-top:0%;
 }
 #hashtag{
-opacity: 15%;
+color: #06ffda;
 }
 #flex{
 display: -webkit-flex;
@@ -157,6 +165,15 @@ height: 25pt;
 width: 25%;
 margin-bottom: 12pt;
 font-family: roboto;
+color: var(--nice-white);
+}
+#pwd{
+background-color:  #2a333fbb;
+height: 25pt;
+width: 25%;
+margin-bottom: 12pt;
+font-family: roboto;
+color: var(--nice-white);
 }
 #message{
 word-wrap: break-word;
@@ -165,6 +182,7 @@ height: 200pt;
 width: 25%;
 margin-bottom: 12pt;
 font-family: roboto;
+color: var(--nice-white);
 }
 #drop{
 color: rgb(107, 107, 107);
